--- a/site/themes/hugo-strata-theme/exampleSite/config.toml
+++ b/site/themes/hugo-strata-theme/exampleSite/config.toml
@@ -1,6 +1,6 @@
-baseurl = "/"
+baseurl = "https://example.org/"
 languageCode = "en-us"
-title = "Dave Walsh blog"
+title = "Strata"
 theme = "hugo-strata-theme"
 disqusShortname = "spf13"
 # Enable Google Analytics by inserting your tracking code
@@ -11,8 +11,8 @@ paginate = 10
 [params]
 	# To provide some metadata for search engines feel free to add a few
     # information about you and your website.
-	name = "Dave Walsh"
-	description = "Dev stuff"
+	name = "Your name"
+	description = "Describe your website"
 
 	# Format dates with Go's time formatting
 	date_format = "2006-01-02"
@@ -26,11 +26,11 @@ paginate = 10
 		# Replace the avatar with a picture of your own under static/images
 		avatar = "avatar.jpg"
 		# Use Markdown to format the string. This works nearly all over the theme
-		bio = "**Super cool web dev tutor"
+		bio = "**I'm Strata**, a super simple<br> responsive site template freebie<br> crafted by [HTML5 UP](//html5up.net)."
 		# The icons will be shown if you enter your username
-		twitter = "walsh_d"
-		github = "walshd"
-		gitlab = ""
+		twitter = "spf13"
+		github = "spf13"
+		gitlab = "spf13"
 		dribbble = ""
 		facebook = ""
 		googleplus = ""
@@ -38,7 +38,7 @@ paginate = 10
 		linkedin = ""
 
 		copyright = [
-			"&copy; Dave Walsh",
+			"&copy; John Doe",
 			"Design: [HTML5 UP](//html5up.net)",
 			"Demo Images: [Unsplash](//unsplash.com/)"
 		]
@@ -102,10 +102,11 @@ paginate = 10
 		content = "Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor."
 
 		address = [
-			"Not for you",
-			"UK"
+			"1234 Somewhere Rd.",
+			"Nashville, TN 00000",
+			"United States"
 		]
-		phone = "?"
+		phone = "000-000-0000"
 
 		# Since this template is static, the contact form uses www.formspree.io as a
 		# proxy. The form makes a POST request to their servers to send the actual
@@ -118,7 +119,7 @@ paginate = 10
 	    # - send a dummy email yourself to confirm your account
 	    # - click the confirm link in the email from www.formspree.io
 	    # - you're done. Happy mailing!
-		email = "dave@davewalsh.co.uk"
+		email = "hello@example.com"
 
 		[params.contact.form]
 			# Set custom strings for the form if your native
@@ -134,11 +135,6 @@ paginate = 10
 	name = "Home"
 	url  = "/"
 	weight = 0
-
-[[menu.main]]
-    name = "About"
-    url  = "about"
-    weight = 5
 
 [[menu.main]]
 	name = "Blog"
