--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -5,8 +5,8 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "site/static/images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "site/static/images/uploads/" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
+public_folder: "src/images/" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
 - name: "blog" # Used in routes, e.g. /admin/collections/blog
