--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -6,7 +6,7 @@ backend:
 publish_mode: editorial_workflow
 
 media_folder: "/static/images/uploads/" # Media files will be stored in the repo under static/images/uploads
-public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+# public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
 - name: "blog" # Used in routes, e.g. /admin/collections/blog
@@ -19,5 +19,5 @@ collections:
     - {label: "Title", name: "title", widget: "string"}
     - {label: "Publish Date", name: "date", widget: "datetime"}
     - {label: "Featured Image", name: "thumbnail", widget: "image"}
-    - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
+    # - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
     - {label: "Body", name: "body", widget: "markdown"}
