--- a/site/config.toml
+++ b/site/config.toml
@@ -26,7 +26,7 @@ paginate = 10
 		# Replace the avatar with a picture of your own under static/images
 		avatar = "avatar.jpg"
 		# Use Markdown to format the string. This works nearly all over the theme
-		bio = "**Super cool web dev tutor"
+		bio = "newbie to headless"
 		# The icons will be shown if you enter your username
 		twitter = "walsh_d"
 		github = "walshd"
@@ -47,7 +47,8 @@ paginate = 10
 	[params.about]
 		hide  = false
 		title = "Get to know Dave walsh"
-		content = "I am a senior lecturer in Web design and development at Edge Hill University. This site is a reflection of my own thoughts and feelings and has nothing todo with Edge Hill! I have been tinkering with the web since it started. My passion is to enable people. Especially studnets with getting interested in the web and the people who make it what it is but also the technogoly. As there is not enough room in any curriculum for everything the web has to offer in terms of design, development and UX, I created this blog where I and guest bloggers can produce tutorials and series of tutorials to learn what industry experts think graduates should know. So go on get in touch and create your own tutorial for this blog."
+		content = "juest trting this out"
+		#content = "I am a senior lecturer in Web design and development at Edge Hill University. This site is a reflection of my own thoughts and feelings and has nothing todo with Edge Hill! I have been tinkering with the web since it started. My passion is to enable people. Especially studnets with getting interested in the web and the people who make it what it is but also the technogoly. As there is not enough room in any curriculum for everything the web has to offer in terms of design, development and UX, I created this blog where I and guest bloggers can produce tutorials and series of tutorials to learn what industry experts think graduates should know. So go on get in touch and create your own tutorial for this blog."
 
 
 	[params.portfolio]
