moved admin folder from site/static/admin to root/src/cms

--- a/src/cms/config.yml
+++ b/src/cms/config.yml
@@ -5,8 +5,8 @@ backend:
 
 publish_mode: editorial_workflow
 
-media_folder: "site/static/images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "https://davewalsh.netlify.com/static/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "site/static/images" # Media files will be stored in the repo under static/images/uploads
+public_folder: "images" # The src attribute for uploaded media will begin with /images/uploads
 
 collections:
 - name: "blog" # Used in routes, e.g. /admin/collections/blog
