--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "hugo": "gulp hugo",
+    "webpack": "gulp webpack",
     "build": "gulp build",
     "build-preview": "gulp build-preview",
     "start": "gulp server",
@@ -24,6 +25,8 @@
     "babel-register": "^6.11.6",
     "browser-sync": "^2.13.0",
     "css-loader": "^0.28.2",
+    "cssnano": "^3.9.1",
+    "date-fns": "^1.27.2",
     "eslint": "^3.1.1",
     "eslint-plugin-import": "^1.11.1",
     "exports-loader": "^0.6.3",
@@ -31,13 +34,23 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-postcss": "^6.1.1",
+    "gulp-replace": "^0.5.4",
     "gulp-util": "^3.0.7",
     "imports-loader": "^0.7.1",
+    "netlify-cms": "^0.3.15",
     "postcss-cssnext": "^2.7.0",
     "postcss-import": "^10.0.0",
     "postcss-loader": "^2.0.5",
+    "postcss-uncss": "^0.14.0",
+    "uncss": "^0.14.1",
     "url-loader": "^0.5.7",
     "webpack": "^2.6.0",
     "whatwg-fetch": "^1.0.0"
+  }
+  "devDependencies": {
+    "gulp-inject": "^4.2.0",
+    "gulp-svgmin": "^1.2.3",
+    "gulp-svgstore": "^6.1.0",
+    "svg-sprite-loader": "^0.1.2"
   }
 }
