--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "hugo": "gulp hugo",
+    "webpack": "gulp webpack",
     "build": "gulp build",
     "build-preview": "gulp build-preview",
     "start": "gulp server",
@@ -23,23 +24,27 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.11.6",
     "browser-sync": "^2.13.0",
-    "css-loader": "^0.28.2",
+    "css-loader": "^0.23.1",
+    "cssnano": "^3.9.1",
+    "date-fns": "^1.27.2",
     "eslint": "^3.1.1",
     "eslint-plugin-import": "^1.11.1",
     "exports-loader": "^0.6.3",
-    "file-loader": "^0.11.1",
+    "file-loader": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-postcss": "^6.1.1",
     "gulp-replace": "^0.5.4",
     "gulp-util": "^3.0.7",
-    "imports-loader": "^0.7.1",
+    "imports-loader": "^0.6.5",
     "netlify-cms": "^0.3.15",
     "postcss-cssnext": "^2.7.0",
-    "postcss-import": "^10.0.0",
-    "postcss-loader": "^2.0.5",
+    "postcss-import": "^8.1.2",
+    "postcss-loader": "^0.9.1",
+    "postcss-uncss": "^0.14.0",
+    "uncss": "^0.14.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.6.0",
+    "webpack": "^1.13.1",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
